# htmltopdf-ms

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: .env  app.py  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/: config.py  main.py  s3.py  util.py
