[tool.poetry]
name = "htmltopdf-ms"
version = "0.1.0"
description = ""
authors = ["Simon Scabello <scabello57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
weasyprint = "^61.2"
python-dotenv = "^1.0.1"
boto3 = "^1.34.68"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
